研修生が日報・提出物を作成したらSlackチャンネルに投稿するようにした
- 企業編集ページにSlackチャンネルカラム追加
- 研修生フラグを管理者がつけられるようにした

--- a/app/views/admin/companies/_form.html.slim
+++ b/app/views/admin/companies/_form.html.slim
@@ -18,6 +18,11 @@
     .form-item
       .row
         .col-md-6.col-xs-12
+          = f.label :slack_channel, class: "a-label"
+          = f.text_field :slack_channel, class: "a-text-input"
+    .form-item
+      .row
+        .col-md-6.col-xs-12
           = f.label "ロゴ", class: "a-label"
           .form-item-file-input.js-file-input.a-file-input
             label.js-file-input__preview(for="company_logo")
