--- a/app/views/practices/products/index.html.slim
+++ b/app/views/practices/products/index.html.slim
@@ -16,5 +16,8 @@ header.page-header
 
 .page-body
   .container
-    .thread-list.a-card
-      = render partial: "products/product", collection: @products, as: :product
+    = paginate @products, position: "top"
+    - if @products.present?
+      .thread-list.a-card
+        = render partial: "products/product", collection: @products, as: :product
+    = paginate @products, position: "bottom"
