ポートフォリオのデザイン修正

--- a/app/assets/stylesheets/blocks/works/_works.sass
+++ b/app/assets/stylesheets/blocks/works/_works.sass
@@ -2,7 +2,11 @@
   margin-bottom: -1.5rem
 
 .works-item
-  margin-bottom: 1.5rem
+  padding-bottom: 1.5rem
+  height: 100%
+
+.works-item__inner
+  height: 100%
 
 .works-item__header
   +border-radius(top, .25rem)
