--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -217,24 +217,13 @@
         = f.hidden_field :training, value: params[:training]
       .form-item
         // リタイア
-        = f.label :retired_on, class: "a-sm-label"
+        = f.label :retired_on, class: "a-label"
         = f.text_field :retired_on, class: "a-text-input"
-      .auth-form-item
-        = f.label :graduated_on, class: "a-sm-label"
-        = f.text_field :graduated_on, class: "a-text-input"
-    - if from == :new
-      .auth-form-item
-        label.a-sm-label
-          | 秘密保持契約
-        ul.auth-form-item__checkboxes
-          li.auth-form-checkbox
-            label.auth-form-checkbox__label.js-nda-action.js-modal(data-target="#nda-modal")
-              | 秘密保持契約に同意する
 
       .form-item
         // 卒業
         = f.label :graduated_on, class: "a-label"
-        = f.text_field :graduated_on, class: "datepicker a-text-input"
+        = f.text_field :graduated_on, class: "a-text-input"
 
   .form-actions
     ul.form-actions__items
