--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -64,7 +64,7 @@ nav.global-nav
           = link_to "https://docs.google.com/spreadsheets/d/1tRexM59inK1u5unRrNFNUNXXltiRQDNZZJf7X-M_G1E/edit#gid=2063800206", class: "global-nav-links__link", target: "_blank" do
             .global-nav-links__link-icon
               i.fas.fa-desktop
-            .global-nav-links__link-label 座席予約
+            .global-nav-links__link-label席予約
         li.global-nav-links__item.is-hidden-md-up
           = link_to courses_path, class: "global-nav-links__link #{current_link /^courses-index/}" do
             .global-nav-links__link-icon
