一般ユーザーが無料／研修ユーザーとして登録される問題を修正

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,6 +1,7 @@
 = form_with model: user, url: url, local: true, html: { name: "user", autocomplete: "new-password" } do |f|
   = f.hidden_field :adviser
-  = hidden_field_tag :training, "true"
+  - if params[:training]
+    = hidden_field_tag :training, "true"
   = render "errors", object: user
   .form__items
     .form-item
@@ -214,7 +215,7 @@
             label.form-checkbox__label
               = f.check_box :trainee, class: "form-checkbox__input"
               = User.human_attribute_name :trainee
-        = f.hidden_field :training, value: params[:training]
+
       .form-item
         // リタイア
         = f.label :retired_on, class: "a-sm-label"
