--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -86,7 +86,5 @@ header.page-header
               i.fas.fa-angle-right
       = link_to @report.user, itempro: "url", class: "thread__author-link" do
         = image_tag @report.user.avatar_image, class: "thread__author-icon is-#{@report.user.role}"
-
-    #js-comments(data-commentable-id="#{@report.id}" data-commentable-type="Report")
-    = render "comments/comments", comments: @report.comments.order(:created_at), form_visibility: true
+    #js-comments(data-commentable-id="#{@report.id}" data-commentable-type="Report" data-current-user-id="#{current_user.id}")
     = render "footprints/footprints", footprints: @footprints
