--- a/app/views/application/_notification_sender.html.slim
+++ b/app/views/application/_notification_sender.html.slim
@@ -1,1 +1,1 @@
-= image_tag sender.avatar_image(48), class: "header-notifications-item__avatar-image"
+= image_tag sender.avatar_image, class: "header-notifications-item__avatar-image"
