--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -14,7 +14,7 @@
                   = user.slack_account
           .users-item__icon
             = link_to user do
-              = image_tag user.avatar_image(80), class: "users-item__icon-image is-#{user.role}"
+              = image_tag user.avatar_image, class: "users-item__icon-image is-#{user.role}"
         = render "users/sns", user: user
       .users-item__body
         .users-item__description.a-short-text
