--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -57,7 +57,7 @@ header.page-header
             | プラクティスに戻る
 
       = link_to @product.user, itempro: "url", class: "thread__author-link" do
-        = image_tag @product.user.avatar_image(120), class: "thread__author-icon is-#{@product.user.role}"
+        = image_tag @product.user.avatar_image, class: "thread__author-icon is-#{@product.user.role}"
 
     = render "comments/comments", comments: @product.comments.order(:created_at), form_visibility: true
     = render "footprints/footprints", footprints: @footprints
