--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -53,7 +53,7 @@ header.page-header
                     | 削除
 
       = link_to @question.user, itempro: "url", class: "thread__author-link" do
-        = image_tag @question.user.avatar_image(120), class: "thread__author-icon is-#{@question.user.role}"
+        = image_tag @question.user.avatar_image, class: "thread__author-icon is-#{@question.user.role}"
     .thread-comments-container
       h3.thread-comments-container__title
         | 回答・コメント
