--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -85,7 +85,7 @@ header.page-header
               | 次の日報
               i.fas.fa-angle-right
       = link_to @report.user, itempro: "url", class: "thread__author-link" do
-        = image_tag @report.user.avatar_image(120), class: "thread__author-icon is-#{@report.user.role}"
+        = image_tag @report.user.avatar_image, class: "thread__author-icon is-#{@report.user.role}"
 
     = render "comments/comments", comments: @report.comments.order(:created_at), form_visibility: true
     = render "footprints/footprints", footprints: @footprints
