--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -46,7 +46,7 @@
       .form-item-file-input.js-file-input.a-file-input.is-avatar
         label.js-file-input__preview
           - if f.object.avatar.attached?
-            = image_tag f.object.avatar_image(100)
+            = image_tag f.object.avatar_image
             p 画像を変更
           - else
             p 画像を選択
