--- a/app/views/admin/diploma/show.html.slim
+++ b/app/views/admin/diploma/show.html.slim
@@ -1,3 +1,22 @@
-h1 卒業証書
+h1 修了証明書
 
-p #{@user.full_name} 殿
+.full_name= @user.full_name
+
+.description あなたはフィヨルドブートキャンプの全過程を修了したことをここに証明します。そして、存分の活躍をされますよう心から期待しております。
+
+.day= l Date.current
+
+p komagata
+
+P FJORD, LLC
+
+p Programmer
+
+p machida
+
+p FJORD, LLC
+
+p Designer
+
+.serial_number No.#{@user.id}
+
