--- a/app/assets/stylesheets/blocks/thread/_thread-comment-form.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-comment-form.sass
@@ -74,10 +74,20 @@ $thread-header-author: 4.75rem
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
 
-
-.thread-comment-form__action
-  display: flex
-  justify-content: center
-  +padding(horizontal, 1rem)
+.thread-comment-form__actions
+  +media-breakpoint-up(md)
+    +padding(horizontal, 1rem)
+    display: flex
+    justify-content: center
+    +margin(horizontal, -.375rem)
   +media-breakpoint-down(sm)
     +padding(horizontal, .75rem)
+
+.thread-comment-form__action
+  +media-breakpoint-up(md)
+    flex: 0 0 18rem
+    max-width: 50%
+    +padding(horizontal, .375rem)
+  +media-breakpoint-down(sm)
+    &:not(:first-child)
+      margin-top: .5rem
