--- a/app/views/notifications/index.html.slim
+++ b/app/views/notifications/index.html.slim
@@ -5,9 +5,13 @@ header.page-header
     .page-header__inner
       h2.page-header__title
         = title
+      .page-header-actions
+        .page-header-actions__items
+          .page-header-actions__item
+            = link_to notifications_allmarks_path, method: :post, class: "a-button is-md is-warning is-block #{current_user.notifications.unreads.empty?  ? 'is-disabled' : ''}" do
+              | 全て既読にする
 
 .page-body
-  = link_to "全て既読にする", notifications_allmarks_path, method: :post
   .container
     = paginate @notifications, position: "top"
     - if @notifications.present?
