--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -114,26 +114,15 @@
 
       .form-item
         // 現在の所属組織
-        = f.label :organization, class: "a-sm-label"
-        = f.text_field :organization, class: "a-sm-text-input", autocomplete: :off, placeholder: "XXX大学XXX学部XXX学科XXX専攻"
+        = f.label :organization, class: "a-label"
+
+        = f.text_field :organization, class: "a-text-input", autocomplete: :off, placeholder: "XXX大学XXX学部XXX学科XXX専攻"
         - unless user.adviser?
           .a-form-help
             p
               | 会社名・学校名などを入力してください（働いていない場合は「なし」としてください）。
               br
               | この情報は他のフィヨルドブートキャンプ参加者には公開されません。
-
-      .form-item
-        // フィヨルドブートキャンプをどこで知りましたか？
-        = f.label :how_did_you_know, "フィヨルドブートキャンプをどこで知りましたか？", class: "a-sm-label"
-        = f.text_area :how_did_you_know, class: "a-sm-text-input", placeholder: "大学時代の先輩である株式会社XXXXでプログラマをやっているXXXXさんから勧められて。"
-        .a-form-help
-          p
-            | 自分で検索エンジンを使って見つけた場合は、
-            | そのときの検索キーワードなども覚えていたら入力してください。
-            | 誰かに紹介してもらった場合、その誰かもお教えください。
-            br
-            | この情報は他のフィヨルドブートキャンプ参加者には公開されません。
 
       .form-item
         ruby:
@@ -144,10 +133,11 @@
             placeholder = "XXXXと申します。月・水・金の 10:00 〜 19:00 に活動します。XXXXと考えたため、プログラマーとして就職することを決意しました。今はXXXXで働いています。XXXXが好きでよくXXXXしています。XXXXが好きな方、仲良くしてください！！"
             help_text = "この情報は他のフィヨルドブートキャンプ参加者に公開されます。あとからでも内容を変更することができます。"
           end
-        = f.label :description, class: "a-sm-label"
-        = f.text_area :description, class: "a-sm-text-input", placeholder: placeholder
+        = f.label :description, class: "a-label"
+        = f.text_area :description, class: "a-text-input", placeholder: placeholder
         .a-form-help
           p = help_text
+
       - if user.admin?
         .form-item
           // 就職活動中
@@ -196,6 +186,7 @@
       = f.password_field :password_confirmation, class: "a-text-input", autocomplete: :nope
       .a-form-help
         p パスワードをもう一度入力
+
     - if admin_login?
       .form-item
         = f.label :company, class: "a-label"
@@ -229,7 +220,7 @@
 
       .form-item
         // リタイア
-        = f.label :retired_on, class: "a-sm-label"
+        = f.label :retired_on, class: "a-label"
         = f.date_field :retired_on, class: "a-text-input"
 
       .form-item
