--- a/app/views/admin/diploma/show.html.slim
+++ b/app/views/admin/diploma/show.html.slim
@@ -1,14 +1,16 @@
 h1 修了証明書
 
-.full_name= @user.full_name
+.full_name
+  = @user.full_name
 
-.description あなたはフィヨルドブートキャンプの全過程を修了したことをここに証明します。そして、存分の活躍をされますよう心から期待しております。
+.description あなたはフィヨルドブートキャンプの#{@user.course.title}コースを修了したことをここに証明します。そして、存分の活躍をされますよう心から期待しております。
 
-.day= l Date.current
+.day
+  = l Date.current
 
 p komagata
 
-P FJORD, LLC
+p FJORD, LLC
 
 p Programmer
 
@@ -19,4 +21,3 @@ p FJORD, LLC
 p Designer
 
 .serial_number No.#{@user.id}
-
