ちょっとしたデザイン崩れ修正

--- a/app/assets/stylesheets/blocks/report/_report-practices.sass
+++ b/app/assets/stylesheets/blocks/report/_report-practices.sass
@@ -1,6 +1,6 @@
 .report-practices
   padding: .625rem 2rem
-  border-bottom: solid 1px $background
+  border-top: solid 1px $background
   +media-breakpoint-down(sm)
     padding: .5rem 1rem
 
