--- a/app/assets/stylesheets/blocks/thread/_thread-prev-next.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-prev-next.sass
@@ -8,7 +8,7 @@
   max-width: 33.33%
 
 .thread-prev-next__item-link
-  +text-block(.8125rem 1.4, block center $main)
+  +text-block(.8125rem 1.4, block center $main nowrap)
   +hover-link-reversal
   &.is-prev
     text-align: left
