タイポ修正

--- a/app/views/welcome/practices.html.slim
+++ b/app/views/welcome/practices.html.slim
@@ -162,7 +162,7 @@ section.welcome-section
         .col-xs-12.col-md-4
           .welcome-small-section
             h3.welcome-small-section__title
-              | Git & Gitdub
+              | Git & GitHub
             table.welcome-table
               tr
                 td
