--- a/app/assets/stylesheets/blocks/form/_form.sass
+++ b/app/assets/stylesheets/blocks/form/_form.sass
@@ -8,6 +8,12 @@
   .form__items + &
     margin-top: 1.75rem
 
+.form__items-title
+  +text-block(.875rem 1.4 0 1em, 600 $reversal-text)
+  background-color: $main
+  padding: .625rem 1rem
+  border-radius: .25rem
+
 .form__items-inner
   width: 42.5rem
   max-width: 100%
