--- a/app/views/notification_mailer/post_announcement-copy.html
+++ b/app/views/notification_mailer/post_announcement-copy.html
@@ -2,18 +2,14 @@
   <tr>
     <td style="word-wrap:break-word;font-size:0px;padding:0px 20px 0px 20px;" align="center">
       <div style="cursor:auto; font-family: sans-serif ;text-align:center;">
-        <h3 style="font-family: sans-serif; font-size: 20px; color:#4638a0; line-height: 1.4; margin-bottom: 0; font-weight: bold">フィヨルドブートキャンプへようこそ</h3>
+        <h3 style="font-family: sans-serif; font-size: 20px; color:#4638a0; line-height: 1.4; margin-bottom: 0; font-weight: bold"><%= @announce.title %></h3>
       </div>
     </td>
   </tr>
   <tr>
     <td style="word-wrap:break-word;font-size:0px;padding:16px 24px 16px 24px;" align="left">
       <div style="cursor:auto;font-family:sans-serif; font-size:14px; line-height:1.8; text-align:left;">
-        <% if @user.adviser? %>
-          <%= render "adviser", user: @user %>
-        <% else %>
-          <%= render "student", user: @user %>
-        <% end %>
+        <%= simple_format(@announce.description) %>
       </div>
     </td>
   </tr>
@@ -24,9 +20,9 @@
         <tbody>
           <tr>
             <td style="border:0px solid #000;border-radius:24px;color:#fff;cursor:auto;padding:12px 32px;"
-              align="center" valign="middle" bgcolor="#30ABDB"><a href="https://bootcamp.fjord.jp/login"
+              align="center" valign="middle" bgcolor="#30ABDB"><a href="#{inner_notification_url(@notification)}"
                 style="text-decoration:none; background:#30ABDB; color:#fff; font-family: sans-serif; font-size:14px; font-weight:bold;line-height:140%; text-transform:none; margin:0px;"
-                target="_blank">フィヨルドブートキャンプへ</a></td>
+                target="_blank">このお知らせへ</a></td>
           </tr>
         </tbody>
       </table>
