--- a/app/views/notification_mailer/_notification_mailer_template.html.erb
+++ b/app/views/notification_mailer/_notification_mailer_template.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table style="width: 100%;">
   <tr>
     <td style="word-wrap:break-word;font-size:0px;padding:0px 20px 0px 20px;" align="center">
       <div style="cursor:auto; font-family: sans-serif ;text-align:center;">
@@ -20,9 +20,9 @@
         <tbody>
           <tr>
             <td style="border:0px solid #000;border-radius:24px;color:#fff;cursor:auto;padding:12px 32px;"
-              align="center" valign="middle" bgcolor="#30ABDB"><a href="#{link_url}"
-                style="text-decoration:none; background:#30ABDB; color:#fff; font-family: sans-serif; font-size:14px; font-weight:bold;line-height:140%; text-transform:none; margin:0px;"
-                target="_blank"><%= link_text %></a></td>
+              align="center" valign="middle" bgcolor="#30ABDB">
+              <%= link_to link_text, link_url, style: "text-decoration:none; background:#30ABDB; color:#fff; font-family: sans-serif; font-size:14px; font-weight:bold;line-height:140%; text-transform:none; margin:0px;" %>
+            </td>
           </tr>
         </tbody>
       </table>
