--- a/app/views/admin/home/index.html.slim
+++ b/app/views/admin/home/index.html.slim
@@ -23,10 +23,10 @@ header.page-header
                   = link_to new_article_path, class: "card-list__item-link" do
                     | ブログ記事作成
                 li.card-list__item
-                  = link_to "https://fjord.slack.com/admin", class: "card-list__item-link", target: "_blank" do
+                  = link_to "https://fjord.slack.com/admin", class: "card-list__item-link", target: "_blank", rel: "noopener" do
                     | Slack管理
                 li.card-list__item
-                  = link_to "https://github.com/fjordllc/fjord/wiki/FjordBootCamp", class: "card-list__item-link", target: "_blank" do
+                  = link_to "https://github.com/fjordllc/fjord/wiki/FjordBootCamp", class: "card-list__item-link", target: "_blank", rel: "noopener" do
                     | 管理者用ドキュメント
                 li.card-list__item
                   = link_to welcome_path, class: "card-list__item-link" do
