--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -3,4 +3,4 @@ footer.footer
     .footer__copyright
       i.fas.fa-copyright
       = link_to "FJORD, LLC", "http://fjord.jp", class: "footer__copyright-link"
-      = Date.today.year
+      = Time.zone.today.year
