--- a/app/views/application/_header_links.html.slim
+++ b/app/views/application/_header_links.html.slim
@@ -25,10 +25,10 @@
                 = link_to new_article_path, class: "header-dropdown__item-link" do
                   | ブログ記事作成
               li.header-dropdown__item
-                = link_to "https://fjord.slack.com/admin", class: "header-dropdown__item-link", target: "_blank" do
+                = link_to "https://fjord.slack.com/admin", class: "header-dropdown__item-link", target: "_blank", rel: "noopener" do
                   | Slack管理
               li.header-dropdown__item
-                = link_to "https://github.com/fjordllc/fjord/wiki/FjordBootCamp", class: "header-dropdown__item-link", target: "_blank" do
+                = link_to "https://github.com/fjordllc/fjord/wiki/FjordBootCamp", class: "header-dropdown__item-link", target: "_blank", rel: "noopener" do
                   | 管理者用ドキュメント
               li.header-dropdown__item
                 = link_to welcome_path, class: "header-dropdown__item-link" do
@@ -49,16 +49,16 @@
               li.header-dropdown__item
                 = link_to "クレジットカード", new_card_path, class: "header-dropdown__item-link"
             li.header-dropdown__item
-              = link_to "https://docs.google.com/spreadsheets/d/1tRexM59inK1u5unRrNFNUNXXltiRQDNZZJf7X-M_G1E/edit#gid=2063800206", class: "header-dropdown__item-link", target: "_blank" do
+              = link_to "https://docs.google.com/spreadsheets/d/1tRexM59inK1u5unRrNFNUNXXltiRQDNZZJf7X-M_G1E/edit#gid=2063800206", class: "header-dropdown__item-link", target: "_blank", rel: "noopener" do
                 | 座席予約
             li.header-dropdown__item
               = link_to courses_path, class: "header-dropdown__item-link" do
                 | コース
             li.header-dropdown__item
-              = link_to "https://github.com/fjordllc/bootcamp/projects/1", class: "header-dropdown__item-link", target: "_blank" do
+              = link_to "https://github.com/fjordllc/bootcamp/projects/1", class: "header-dropdown__item-link", target: "_blank", rel: "noopener" do
                 | GitHub
             li.header-dropdown__item
-              = link_to "https://suzuri.jp/FjordBootCamp", class: "header-dropdown__item-link", target: "_blank" do
+              = link_to "https://suzuri.jp/FjordBootCamp", class: "header-dropdown__item-link", target: "_blank", rel: "noopener" do
                 | Goodies
             li.header-dropdown__item
               = link_to logout_path, class: "header-dropdown__item-link" do
