--- a/app/views/card/_notice.html.slim
+++ b/app/views/card/_notice.html.slim
@@ -9,5 +9,5 @@
     | クレジットカードに関して問題がありましたら #{mail_to "info@fjord.jp"} までお問い合わせください。
   p
     | クレジットカード情報は当社のサーバーには保存せず、
-    = link_to "Stripe.com", "https://stripe.com/docs/security/stripe", target: "_blank"
+    = link_to "Stripe.com", "https://stripe.com/docs/security/stripe", target: "_blank", rel: "noopener"
     | を使用して安全に取り扱っています。
