--- a/app/views/static_pages/thanks.html.slim
+++ b/app/views/static_pages/thanks.html.slim
@@ -11,5 +11,5 @@
       p
         | 申し込みが送信されました。
         br
-        = link_to "@komagata", "https://twitter.com/komagata", target: "_blank"
+        = link_to "@komagata", "https://twitter.com/komagata", target: "_blank", rel: "noopener"
         | が折り返しメールします。
