--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -234,4 +234,4 @@
         = f.submit user_submit_label(user, from), class: "a-button is-lg is-warning is-block"
         - if from == :new
           .a-form-help.is-text-align-center
-            = link_to "利用規約を確認（別タブで開きます）", tos_path, target: "_blank"
+            = link_to "利用規約を確認（別タブで開きます）", tos_path, target: "_blank", rel: "noopener"
