--- a/app/views/users/_github_grass.html.slim
+++ b/app/views/users/_github_grass.html.slim
@@ -3,7 +3,7 @@
     h2.card-header__title GitHub
   .user-grass
     - if user.github_account
-      = link_to "https://github.com/#{user.github_account}", class: "user-grass__image-link", target: "_blank" do
+      = link_to "https://github.com/#{user.github_account}", class: "user-grass__image-link", target: "_blank", rel: "noopener" do
         = image_tag user_github_grass_url(user), class: "a-grass"
     - else
       .user-grass__empty
