--- a/app/views/welcome/_administrator.slim
+++ b/app/views/welcome/_administrator.slim
@@ -83,5 +83,5 @@ section.welcome-section.is-administrator.is-bird#administrator
             tr
               th URL
               td
-                = link_to "http://fjord.jp", target: "_blank", class: "welcome-child-section__description-link" do
+                = link_to "http://fjord.jp", target: "_blank", rel: "noopener", class: "welcome-child-section__description-link" do
                   | fjord.jp
