--- a/app/views/welcome/_conditions.slim
+++ b/app/views/welcome/_conditions.slim
@@ -26,7 +26,7 @@ section.welcome-child-section.is-conditions
             .welcome-small-section__actions
               .welcome-small-section__actions-items
                 .welcome-small-section__actions-item
-                  = link_to "http://docs.komagata.org/5535", class: "a-welcome-button is-sm", target: "_blank"  do
+                  = link_to "http://docs.komagata.org/5535", class: "a-welcome-button is-sm", target: "_blank", rel: "noopener"  do
                     | おすすめのMac
       .col-xs-12.col-md-4
         section.welcome-small-section
