--- a/app/views/welcome/_welcome_footer.html.slim
+++ b/app/views/welcome/_welcome_footer.html.slim
@@ -9,10 +9,10 @@ footer.welcome-footer
           = link_to law_path, class: "welcome-footer__nav-item-link" do
             | 特定商取引法に基づく表記
         li.welcome-footer__nav-item
-          = link_to "http://fjord.jp", class: "welcome-footer__nav-item-link", target: "_blank" do
+          = link_to "http://fjord.jp", class: "welcome-footer__nav-item-link", target: "_blank", rel: "noopener" do
             | 会社概要
     small.welcome-footer-copyright
       i.far.fa-copyright
       span.welcome-footer-copyright__author
         | FJORD,LLC.
-      = Date.today.year
+      = Time.zone.today.year
