--- a/app/views/admin/users/_table.html.slim
+++ b/app/views/admin/users/_table.html.slim
@@ -48,7 +48,7 @@
               | 非アクティブ
           td.admin-table__item-value
             = link_to user_path(user), class: "admin-table__user", target: "_blank" do
-              = image_tag user.avatar, class: "admin-table__user-icon"
+              = image_tag user.avatar_image, class: "admin-table__user-icon"
               span.admin-table__user-login-name
                 = user.login_name
                 | （#{user.full_name}）
