他人を退会させられるバグの修正

--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -93,7 +93,7 @@ nav.global-nav
               i.fas.fa-sign-out-alt
             .global-nav-links__link-label サインアウト
         li.global-nav-links__item.is-hidden-md-up
-          = link_to new_user_retirement_path(current_user), class: "global-nav-links__link" do
+          = link_to new_retirement_path, class: "global-nav-links__link" do
             .global-nav-links__link-icon
               i.fas.fa-sad-tear
             .global-nav-links__link-label 退会手続き
