--- a/app/views/current_user/edit.html.slim
+++ b/app/views/current_user/edit.html.slim
@@ -19,4 +19,4 @@ header.page-header
            span.auth-form-nav__item-link
             | 利用規約を確認
         li.auth-form-nav__item
-           = link_to "退会手続きへ進む", new_user_retirement_path(current_user), class: "auth-form-nav__item-link test-fixed-bottom"
+           = link_to "退会手続きへ進む", new_retirement_path, class: "auth-form-nav__item-link test-fixed-bottom"
