--- a/app/views/retirement/new.html.slim
+++ b/app/views/retirement/new.html.slim
@@ -9,9 +9,9 @@ header.page-header
   header.auth-form__header
     h1.auth-form__title 退会手続き
   .auth-form__body
-    - if @user.errors.any?
-      = render "errors", object: @user
-    = form_with model: @user, local: true, url: user_retirement_path, method: :post, class: "form" do |f|
+    - if current_user.errors.any?
+      = render "errors", object: current_user
+    = form_with model: current_user, local: true, url: retirement_path, method: :post, class: "form" do |f|
       .form__items
         .form-item
           = f.label :retire_reason, "退会理由", class: "a-label"
