User詳細ページに退会理由の項目を追加

--- a/app/views/users/_metas.html.slim
+++ b/app/views/users/_metas.html.slim
@@ -63,9 +63,15 @@
           = User.human_attribute_name :graduated_on
         .user-metas__item-value
           = l user.graduated_on
-    - if user.retired_on.present?
+    - if user.retired?
       .user-metas__item
         .user-metas__item-label
           = User.human_attribute_name :retired_on
         .user-metas__item-value
           = l user.retired_on
+    - if user.retired? && current_user.admin?
+      .user-metas__item
+        .user-metas__item-label
+          = User.human_attribute_name :retire_reason
+        .user-metas__item-value
+          = user.retire_reason
