namecards機能を作成した

--- a/app/views/admin/_admin_page_tabs.html.slim
+++ b/app/views/admin/_admin_page_tabs.html.slim
@@ -17,3 +17,7 @@
         = link_to "企業",
           admin_companies_path,
           class: "page-tabs__item-link #{current_link /^admin-companies/}"
+      li.page-tabs__item
+        = link_to "ネームカード",
+          new_admin_namecard_path,
+          class: "page-tabs__item-link #{current_link /^admin-namecards/}"
