--- a/app/views/notification_mailer/came_question.html.slim
+++ b/app/views/notification_mailer/came_question.html.slim
@@ -1,4 +1,4 @@
-= render "notification_mailer_template", title: "「#{@question.practice.title}」についての質問がありました。", link_url: inner_notification_url(@notification), link_text: "質問へ" do
+= render "notification_mailer_template", title: "「#{@question.practice.title}」についての質問がありました。", link_url: notification_url(@notification), link_text: "質問へ" do
   p #{@question.user.login_name}さんから「#{@question.practice.title}」についての質問がありました。アドバイスや回答を投稿しよう！！
   div(style="border-top: solid 1px #ccc; height: 0;")
   = simple_format(@question.description)
