--- a/app/views/notification_mailer/watching_notification.html.slim
+++ b/app/views/notification_mailer/watching_notification.html.slim
@@ -1,5 +1,5 @@
-= render "notification_mailer_template", title: "#{@watchable.title}にコメントが投稿されました。", link_url: inner_notification_url(@notification), link_text: t(@watchable.class.to_s) do
+= render "notification_mailer_template", title: "#{@watchable.title}にコメントが投稿されました。", link_url: notification_url(@notification), link_text: t(@watchable.class.to_s) do
   p
     | ウォッチしている【
-    = link_to @watchable.title, inner_notification_url(@notification)
+    = link_to @watchable.title, notification_url(@notification)
     | 】にコメントが投稿されました。
